add hero layout

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,9 +12,10 @@
 
 // LAYOUTS
 @import "./layouts/grid";
-@import "./layouts/buttons";
+@import "./layouts/hero";
 
 // MODULES
+@import "./modules/buttons";
 @import "./modules/form";
 
 // STATES
