setup the results loader anim

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 // MODULES
 @import "./modules/buttons";
 @import "./modules/form";
+@import "./modules/loaders";
 
 // STATES
 @import "./states/animations";
