--- a/src/scss/states/_animations.scss
+++ b/src/scss/states/_animations.scss
@@ -1,3 +1,21 @@
 /*********************************************************
     Animations
 *********************************************************/
+
+@keyframes grow {
+    0% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      opacity: 0;
+    }
+    50% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      opacity: 0;
+    }
+  }
