--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,8 +5,8 @@
 /*********************************************************
     Colors
 *********************************************************/
-$color-primary: #c60813;
-$color-secondary: #7c9091;
+$color-primary: #018E5B;
+$color-secondary: #00231A;
 $color-white: #ffffff;
 $color-body: #222;
 
