--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -4,7 +4,8 @@
 .hero {
   position: relative;
   height: 550px;
-  //background: url('../img/bg-brick.png') 0 0 repeat;
+  background: url('../img/hero-bg.jpg') center center no-repeat;
+  background-size: cover;
 
   &--has-overlay {
     &:after {
@@ -34,6 +35,7 @@
 
   &__background-image {
     height: 100%;
+    background: url('https://images.unsplash.com/photo-1508355991726-ebd81e4802f7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=479fe53b6738f375934d0edab32e1d5d&auto=format&fit=crop&w=1953&q=80') center center no-repeat;
   }
 
   &__logo {
@@ -55,7 +57,7 @@
     z-index: 10;
     @include bp_md {
       margin: 0 auto;
-      max-width: 65%;
+      max-width: 50%;
     }
   }
 
