--- a/src/scss/modules/_loaders.scss
+++ b/src/scss/modules/_loaders.scss
@@ -5,7 +5,7 @@
 .loader {
   display: inline-block;
   position: relative;
-  margin: rem(30) auto;
+  margin: rem(60) auto;
   width: calc-em(40px);
   height: calc-em(20px);
   vertical-align: middle;
@@ -23,7 +23,7 @@
   top: 0;
   width: 10px;
   height: 20px;
-  background-color: $color-primary;
+  background-color: $color-white;
   animation: grow 1.5s linear infinite;
   @media (min-width: $bp_md) {
     height: 30px;
@@ -42,18 +42,18 @@
 .loading-text {
   display: inline-block;
   margin-left: rem(50);
-  color: $color-primary;
-  font-size: 1rem;
+  color: $color-white;
+  font-size: 1.2rem;
   @media (min-width: $bp_md) {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
 }
 
 #results {
   margin: rem(30) auto;
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-transform: capitalize;
   @media (min-width: $bp_md) {
-    font-size: 1.2rem;
+    font-size: 2rem;
   }
 }
