--- a/src/scss/modules/_loaders.scss
+++ b/src/scss/modules/_loaders.scss
@@ -5,9 +5,9 @@
 .loader {
   display: inline-block;
   position: relative;
-  margin: rem(60) auto;
-  width: calc-em(40px);
-  height: calc-em(20px);
+  margin: rem(48) auto;
+  width: 40px;
+  height: 20px;
   vertical-align: middle;
   @media (min-width: $bp_md) {
     height: 30px;
@@ -41,7 +41,7 @@
 }
 .loading-text {
   display: inline-block;
-  margin-left: rem(50);
+  margin-left: rem(10);
   color: $color-white;
   font-size: 1.2rem;
   @media (min-width: $bp_md) {
